--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_native_splash: ^2.3.5
   flutter_screenutil: ^5.9.0
   svg_flutter: ^0.0.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
